# termora

./: .gitignore  .release-please-manifest.json  AGENT_RULES.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TESTING_E2E.md  TODO.md  biome.json  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.base.json  vitest.config.ts
.github/: build-matrix.json
.github/workflows/: build.yml  ci.yml  cleanup-caches.yml  release-please.yml  release-sea.yml  release.yml  rust-agent.yml
.next/: trace  trace-build
.next/cache/: config.json
crates/async-xpty/: Cargo.toml  LICENSE-MIT
crates/async-xpty/src/: command.rs  lib.rs  tests.rs  unix.rs  windows.rs
crates/async-xpty/tests/: conpty_minimal.rs
crates/nexterm-agent/: Cargo.toml
crates/nexterm-agent/src/: batch.rs  daemon.rs  elevation.rs  expand.rs  framing.rs  handler.rs  headless.rs  logging.rs  main.rs  process.rs  protocol.rs  pty.rs  shell.rs
crates/nexterm-agent/tests/: integration.rs  protocol_compat.rs
crates/termora-agent/: Cargo.toml
crates/termora-agent/src/: daemon.rs  elevation.rs  expand.rs  handler.rs  headless.rs  logging.rs  main.rs  process.rs  protocol.rs
crates/termora-agent/tests/: integration.rs  protocol_compat.rs
docs/: CONFIG_REFERENCE.md  IDEATION_BRIEF.md  MVP_ROADMAP.md  PROTOCOL.md  SECURITY.md  SPEC.md  STORAGE.md  decisions.md
docs/audit/: BACKLOG.md  OVERVIEW.md
docs/briefs/: COHERENCE.md  UX-01-tab-actions.md  UX-02-terminal-title.md  UX-03-host-management.md  UX-04-scrollback-search.md  UX-05-notifications.md  UX-06-theming.md  UX-07-host-customization.md  UX-09-settings-panel.md  desktop-translucency.md  issue-92-gui-agent-manager.md  launch-profiles.md  rust-agent.md
docs/guides/: tauri-updater-setup.md
docs/historic/: done-2026-03.md
docs/plans/: AGENT-DAEMON.md  AUD-P0-SEC.md  agent-fetch.md  desktop-translucency.md  gui-agent-manager.md  issue-94-quit-lifecycle.md  launch-profiles.md  logging-daemon.md  packaging-strategy.md  prompt-routing-redesign.md  rust-agent.md  session-acquisition-redesign.md  ux-01-tab-actions.md  ux-02-terminal-title.md  ux-03-host-management.md  ux-04-scrollback-search.md  ux-05-notifications.md  ux-06-theming.md  ux-07-host-customization.md  ux-09-settings-panel.md  ux-10-wallpaper.md  ux-11-connection-experience.md
docs/reports/: ARCH_SEC_AUDIT.md
docs/superpowers/plans/: 2026-03-23-build-matrix.md  2026-03-23-font-picker.md  2026-03-24-remote-agent-deploy.md  2026-03-24-ssh-key-picker.md
docs/superpowers/specs/: 2026-03-23-build-matrix-design.md  2026-03-23-font-picker-design.md  2026-03-24-remote-agent-deploy-design.md  2026-03-24-ssh-key-picker-design.md  2026-04-03-build-versioning-design.md
scripts/: build-agent.ps1  build-agent.sh  build-desktop.ps1  build-desktop.sh  build-hub.ps1  build-hub.sh  build-sea-agent.spec.ts  build-sea-agent.ts  build-sea-binary.spec.ts  build-sea-binary.ts  build-sea-hub.spec.ts  build-sea-hub.ts  build-web.ps1  build-web.sh  check-npm-licenses.sh  ci-matrix.spec.ts  dev-restart.ps1  dev-restart.sh  dev-start.ps1  dev-start.sh  dev-stop.ps1  dev-stop.sh  embed-web.js  generate-updater-key.sh  package-sea-agent.ts  package-sea-hub.spec.ts  package-sea-hub.ts  prepare-desktop.sh  rename-sea-binaries.sh  sea-agent-e2e.spec.ts  sea-hub-e2e.spec.ts
scripts/dev/: headless-hub-test.sh  headless-spawn-probe.mts
