[package]
name = "async-xpty"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Cross-platform async PTY for tokio"
repository = "https://github.com/khiops/termora"
keywords = ["pty", "terminal", "async", "tokio", "cross-platform"]
categories = ["asynchronous", "os"]

[dependencies]
tokio = { version = "1", features = ["io-util", "rt", "net", "process", "signal", "sync", "time"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["term", "fs", "process", "signal"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
