[package]
name = "termora-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "termora-agent"
path = "src/main.rs"

[dependencies]
async-xpty = { path = "../async-xpty" }
tokio = { version = "1", features = ["full"] }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ulid = "1"
vt100 = "0.15"
zeroize = { version = "1", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
rmpv = { version = "1", features = ["with-serde"] }
