[package]
name = "termora-agent"
version = "0.6.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/khiops/termora"

[[bin]]
name = "termora-agent"
path = "src/main.rs"

[dependencies]
# Extracted to its own repo (khiops/async-xpty, #87). Git dep pinned to an
# immutable rev during co-development; switches to a crates.io version once
# published. Bumping the rev is a deliberate, reviewable change.
async-xpty = { git = "https://github.com/khiops/async-xpty", rev = "10423351e093f4c83f7935d49e42243e51263db7" }
tokio = { version = "1", features = ["full"] }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ulid = "1"
vt100 = "0.15"
zeroize = { version = "1", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
rmpv = { version = "1", features = ["with-serde"] }
